<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/display_settings"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            app:key="show_stars"
            app:title="@string/show_stars"
            app:defaultValue="true"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            app:key="show_planets"
            app:title="@string/show_planets"
            app:defaultValue="true"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            app:key="show_labels"
            app:title="@string/show_labels"
            app:defaultValue="true"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            app:key="show_faint_stars"
            app:title="@string/show_faint_stars"
            app:defaultValue="true"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            app:key="show_glow_effects"
            app:title="@string/show_glow_effects"
            app:defaultValue="true"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/appearance"
        app:iconSpaceReserved="false">

        <SeekBarPreference
            app:key="brightness"
            app:title="@string/brightness"
            app:defaultValue="100"
            android:min="10"
            android:max="100"
            app:showSeekBarValue="true"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/controls"
        app:iconSpaceReserved="false">

        <SeekBarPreference
            app:key="zoom_sensitivity"
            app:title="@string/zoom_sensitivity"
            app:defaultValue="10"
            app:min="1"
            android:max="10"
            app:showSeekBarValue="true"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <Preference
        app:key="reset_defaults"
        app:title="@string/reset_to_defaults"
        app:iconSpaceReserved="false" />

</PreferenceScreen>